# snapdragon-oc

./: .gitmodules  CONTRIBUTING.md  README.md  repolint.json
Demo/Android/SDOCDemo/: README.txt  build.gradle  settings.gradle
Demo/Android/SDOCDemo/app/: build.gradle
Demo/Android/SDOCDemo/app/src/androidTest/java/com/qualcomm/sdocdemo/: ExampleInstrumentedTest.java
Demo/Android/SDOCDemo/app/src/main/: AndroidManifest.xml
Demo/Android/SDOCDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Demo/Android/SDOCDemo/app/src/main/java/com/qualcomm/sdocdemo/: MainActivity.java
Demo/Android/SDOCDemo/app/src/main/res/layout/: activity_main.xml
Demo/Android/SDOCDemo/app/src/main/res/values/: strings.xml  themes.xml
Demo/Android/SDOCDemo/app/src/main/res/values-night/: themes.xml
Demo/Android/SDOCDemo/app/src/test/java/com/qualcomm/sdocdemo/: ExampleUnitTest.java
Demo/Android/SDOCDemo/gradle/wrapper/: gradle-wrapper.properties
Demo/iOS/: README.md
Demo/iOS/iQOC/: Info.plist  ViewController.mm  iQOCWrapper.cpp  iQOCWrapper.hpp
Demo/iOS/iQOC.xcodeproj/: project.pbxproj
Demo/iOS/iQOC.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Demo/iOS/iQOC.xcodeproj/xcshareddata/xcschemes/: iQOC.xcscheme
Demo/iOS/iQOC/Base.lproj/: Main.storyboard
Demo/iOS/iQOC/QOC/lib/QOC.quic.framework/: Info.plist  QOC.quic
Demo/iOS/iQOC/QOC/lib/QOC.quic.framework/Headers/: SDOCAPI.h
MeshReducer/: CMakeLists.txt  README.md
MeshReducer/TestData/: SunTempleStatue.off
MeshReducer/src/: MeshReducer.cpp  MeshReducer.h  main.cpp
Source/: .gitignore
Source/app/: CMakeLists.txt  build.gradle
Source/app/FuzzyCulling/: CMakeLists.txt  GenerateProjectFiles.bat  GenerateProjectFiles2019.bat  GenerateProjectFiles2022.bat  GenerateProjectFiles_Mac.command  GenerateProjectFiles_ios.command
Source/app/FuzzyCulling/API/: CMakeLists.txt  SDOCAPI.h
Source/app/FuzzyCulling/API/private/: SDOCAPI.cpp  SOCPrivate.cpp  SOCPrivate.h
Source/app/FuzzyCulling/Common/: CMakeLists.txt  CompilerSpecificSIMD.h  MathUtil.h  MemUtil.h  SOCUtil.h  SSE2NEON.h  SSE2NEON_Win.h  Vec3f.h
Source/app/FuzzyCulling/Common/src/: SOCUtil.cpp
Source/app/FuzzyCulling/GOLDEN_DATA/all/: SunBoundaryWall.cap  SunInterleaveBug.cap  SunNearClip.cap  SunPlane.cap  SunTempleUnhandledMirrorBug.cap  Suntemple1.cap  SuntempleBug2.cap  SuntempleFloorBug.cap  SuntempleInterleaveBug.cap  SuntempleLargeSlope.cap  SuntempleOccludeeNeedMaxClampBug.cap  SuntempleView.cap
Source/app/FuzzyCulling/Test/: CMakeLists.txt  SDOCReplayer.cpp  SDOCReplayer.h  main.cpp
Source/app/FuzzyCulling/Util/: CMakeLists.txt
Source/app/FuzzyCulling/Util/RapidRasterizer/: CMakeLists.txt  MeshReducer.h  OccluderQuad.h  RapidRasterizer.h
Source/app/FuzzyCulling/Util/RapidRasterizer/src/: MeshReducer.cpp  OccluderQuad.cpp  RapidRasterizer.cpp  Rasterizer.cpp  Rasterizer.h
Source/app/src/androidTest/java/com/qualcomm/fuzzyculling/: ExampleInstrumentedTest.java
Source/app/src/main/: AndroidManifest.xml
Source/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Source/app/src/main/java/com/qualcomm/fuzzyculling/: MainActivity.java
Source/app/src/main/res/values/: strings.xml
Source/app/src/test/java/com/qualcomm/fuzzyculling/: ExampleUnitTest.java
Source/gradle/wrapper/: gradle-wrapper.properties
